Unit3.FitnessTrackPro Updates

--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,14 @@
 
 form,
 label,
-main {
+main,
+.sets {
   display: grid;
   gap: 0.5rem;
 }
 
 #root {
-  width: 45ch;
+  width: 50ch;
   margin: 0 auto;
   padding: 1rem;
 }
@@ -32,7 +33,7 @@ a {
   color: teal;
 }
 
-a:hover {
+a:hover a.active {
   cursor: pointer;
   text-decoration: underline;
 }
